[gd_scene load_steps=6 format=3 uid="uid://ct2dnydbb7xty"]

[ext_resource type="Script" path="res://start.gd" id="1_408rq"]
[ext_resource type="Texture2D" uid="uid://dxmg2ool5kfj2" path="res://Enviroment/Hooked img's/Play_Button.png" id="3_uevid"]
[ext_resource type="Texture2D" uid="uid://bcepbrgqcqqc1" path="res://Enviroment/Hooked img's/Quit_Button.png" id="4_t78ss"]
[ext_resource type="PackedScene" uid="uid://dwkr240gs3hx0" path="res://scene_transition_animation.tscn" id="5_gmruu"]
[ext_resource type="PackedScene" uid="uid://ia3jwdxu23w0" path="res://Buttons.tscn" id="5_rseur"]

[node name="Start" type="Node2D"]
script = ExtResource("1_408rq")

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("5_gmruu")]
position = Vector2(575, 323)
scale = Vector2(2.002, 2.002)

[node name="Button" type="Button" parent="."]
offset_left = 213.0
offset_top = 490.0
offset_right = 414.0
offset_bottom = 580.0

[node name="Button2" type="Button" parent="."]
offset_left = 737.0
offset_top = 490.0
offset_right = 938.0
offset_bottom = 580.0

[node name="PlayButton" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(316, 528)
scale = Vector2(7.145, 7)
texture = ExtResource("3_uevid")

[node name="QuitButton" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(833, 525)
scale = Vector2(7, 7)
texture = ExtResource("4_t78ss")

[node name="Buttons" parent="." instance=ExtResource("5_rseur")]
position = Vector2(-153, 690)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
